# minervaui

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs
src/controller/: mod.rs  products.rs  user.rs
src/model/: message.rs  mod.rs  products.rs  sales.rs  user.rs
src/view/: common.rs  login.rs  menubar.rs  mod.rs  pdv.rs  products.rs  user.rs
