[package]
name = "minervaui"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lucas S. Vieira"]

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
cursive = "0.20.0"
cursive_table_view = "0.14.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
rust_decimal = { version = "1.35.0", features = ["serde-with-arbitrary-precision", "serde-float"] }
rust_decimal_macros = "1.34.2"
